@@ -1,44 +1,0 @@
-#!/usr/bin/env bash
-# SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2016-2018, Intel Corporation
-#
-#
-# libpmempool_api/TEST11 -- test for checking API
-#
-
-. ../unittest/unittest.sh
-
-require_test_type medium
-
-require_fs_type any
-
-# this test creates huge file
-configure_valgrind memcheck force-disable
-configure_valgrind pmemcheck force-disable
-configure_valgrind helgrind force-disable
-configure_valgrind drd force-disable
-
-setup
-
-POOL=$DIR/file.pool
-LOG=out${UNITTEST_NUM}.log
-LOG_TEMP=out${UNITTEST_NUM}_part.log
-rm -f $LOG && touch $LOG
-rm -f $LOG_TEMP && touch $LOG_TEMP
-
-truncate -s1T $POOL
-expect_normal_exit $BTTCREATE -s 1T -b 512M -t $POOL >> $LOG_TEMP
-
-$PMEMSPOIL $POOL "bttdevice.arena(0).btt_info.checksum=777"\
-	"bttdevice.arena(0).btt_info_backup.checksum=777" >> $LOG_TEMP
-check_file $POOL
-
-expect_normal_exit ./libpmempool_test$EXESUFFIX -r 1 -t btt $POOL >> $LOG
-cat $LOG >> $LOG_TEMP
-expect_normal_exit ./libpmempool_test$EXESUFFIX -r 1 -t btt -a 1 $POOL >> $LOG
-cat $LOG >> $LOG_TEMP
-
-mv $LOG_TEMP $LOG
-
-check
-pass
