@@ -1,46 +1,0 @@
-#!/usr/bin/env bash
-# SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2016-2018, Intel Corporation
-#
-#
-# libpmempool_api/TEST12 -- test for checking API
-#
-
-. ../unittest/unittest.sh
-
-require_test_type medium
-
-require_fs_type any
-
-setup
-
-POOL=$DIR/file.pool
-LOG=out${UNITTEST_NUM}.log
-LOG_TEMP=out${UNITTEST_NUM}_part.log
-rm -f $LOG && touch $LOG
-rm -f $LOG_TEMP && touch $LOG_TEMP
-
-ent_val=5
-
-expect_normal_exit $BTTCREATE $POOL
-
-for((i=0;i<ent_val;i++));
-do
-	spcmd="bttdevice.arena.btt_map(${i})=0x0000000${i}"
-	echo $spcmd >> $LOG_TEMP
-	$PMEMSPOIL $POOL $spcmd
-done
-
-spcmd="bttdevice.arena.btt_flog(0).seq=4"
-echo $spcmd >> $LOG_TEMP
-$PMEMSPOIL $POOL $spcmd
-
-expect_normal_exit ./libpmempool_test$EXESUFFIX -r 1 -t btt $POOL >> $LOG
-cat $LOG >> $LOG_TEMP
-expect_normal_exit ./libpmempool_test$EXESUFFIX -r 1 -t btt -a 1 $POOL >> $LOG
-cat $LOG >> $LOG_TEMP
-
-mv $LOG_TEMP $LOG
-
-check
-pass
