@@ -1,28 +1,0 @@
-#!/usr/bin/env bash
-# SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2016-2018, Intel Corporation
-#
-#
-# libpmempool_api/TEST8 -- test for checking API
-#
-
-. ../unittest/unittest.sh
-
-require_test_type medium
-
-require_fs_type any
-
-setup
-
-POOL=$DIR/file.pool
-LOG=out${UNITTEST_NUM}.log
-rm -f $LOG && touch $LOG
-
-expect_normal_exit $PMEMPOOL$EXESUFFIX create log $POOL
-check_file $POOL
-expect_normal_exit $PMEMWRITE$EXESUFFIX $POOL TEST
-
-expect_normal_exit ./libpmempool_test$EXESUFFIX -t blk $POOL >> $LOG
-check
-
-pass
