@@ -4,7 +4,5 @@ checking shutdown state
 shutdown state correct
 checking pool header
 pool header correct
-checking pmemlog header
-pmemlog header correct
 status = consistent
 libpmempool_api$(nW)TEST0: DONE
