@@ -1,23 +1,0 @@
-libpmempool_api/TEST11: START: libpmempool_test$(nW)
- ./libpmempool_test$(nW) -r 1 -t btt $(nW)
-checking BTT Info headers
-arena 0: BTT Info header checksum incorrect. Do you want to regenerate BTT Info?
-arena 0: regenerating BTT Info header
-the following error can be fixed using PMEMPOOL_CHECK_ADVANCED flag
-arena 0: BTT Info header checksum incorrect
-status = cannot repair
-libpmempool_api/TEST11: DONE
-libpmempool_api/TEST11: START: libpmempool_test$(nW)
- ./libpmempool_test$(nW) -r 1 -t btt -a 1 $(nW)
-checking BTT Info headers
-arena 0: BTT Info header checksum incorrect. Do you want to regenerate BTT Info?
-arena 0: regenerating BTT Info header
-arena 0: BTT Info header checksum incorrect. Do you want to regenerate BTT Info checksum?
-arena 0: BTT Info backup checksum incorrect. Do you want to restore it from BTT Info header?
-arena 0: restoring BTT Info backup from header
-arena 1: BTT Info header checksum correct
-checking BTT Map and Flog
-arena 0: checking BTT Map and Flog
-arena 1: checking BTT Map and Flog
-status = repaired
-libpmempool_api/TEST11: DONE
