@@ -1,28 +1,9 @@
-Pool type: log Params: log
 libpmempool_api$(nW)TEST9: START: libpmempool_test$(nW)
- $(nW)libpmempool_test$(nW) -d 1 -r 1 -y 1 -t log $(nW)
+ $(nW)libpmempool_test$(nW) -d 1 -r 1 -y 1 $(nW)
 checking shutdown state
 shutdown state correct
 checking pool header
 incorrect pool header
-pool_hdr.major is not valid
-setting pool_hdr.major to 0x1
-checking pmemlog header
-pmemlog header correct
-status = repaired
-libpmempool_api$(nW)TEST9: DONE
-Pool type: blk Params: blk 512
-libpmempool_api$(nW)TEST9: START: libpmempool_test$(nW)
- $(nW)libpmempool_test$(nW) -d 1 -r 1 -y 1 -t blk $(nW)
-checking shutdown state
-shutdown state correct
-checking pool header
-incorrect pool header
-pool_hdr.major is not valid
-setting pool_hdr.major to 0x1
-checking pmemblk header
-pmemblk header correct
-checking BTT Info headers
-BTT Layout not written
-status = repaired
+the repair of pmemobj pools is not supported
+status = cannot repair
 libpmempool_api$(nW)TEST9: DONE
