@@ -13,6 +13,7 @@ OBJS = write.o
 LIBPMEM=y
 LIBPMEMBLK=y
 LIBPMEMLOG=y
+LIBPMEMOBJ=y
 TOOLS_COMMON=y
 TOOLS_PMEMPOOL_COMMON=y
 LIBPMEMBLK_PRIV=btt_info_convert2h
